created JSON with html body

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>front end practica maqueta</title>
+        <title>Proyect</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
@@ -13,148 +13,13 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link src="styles.scss" rel="stylesheet"/>
     </head>
-    <body id="page-top">
-        <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-            <div class="container">
-                <a class="navbar-brand" >Argentina Programa</a>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
-                        <a class="social-icon" href="#!"><i class="fa-brands fa-instagram"></i></a>
-                        <a class="social-icon" href="#!"><i class="fa-solid fa-right-to-bracket"></i></a>
-                    </div>
-                </div>
-            </div>
-        </nav>
-
-        <!-- Page Content-->
-        <div class="container-fluid p-0">
-            <!-- Image logo and Banner -->
-            <section class="section-image">
-                <div class="image-banner">
-                    <div class="banner">
-                        <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
-                        <div class="container-image">
-                            <img src="./assets/img/snoopy.jpg">
-                        </div>
-                    </div>
-                    <h1 class="mb-0">
-                        Fabian
-                        <span class="text-primary">Prutt</span>
-                    </h1>
-                    <p class="lead mb-5">Profesor en La UNLP</p>
-                    <p class="lead mb-5">Buenos Aires(Argentina)</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- About-->
-            <section class="resume-section" id="about">
-                <div class="resume-section-content">
-                    <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
-                    <h2 class="mb-5">Acerca De</h2>
-                    <p class="lead mb-5">Soy una persona apasionada por la tecnología y la informática. Me gusta aprender sobre nuevas herramientas y lenguajes de programación para mejorar mis habilidades y poder aplicarlas en diferentes proyectos. Me considero una persona muy proactiva y comprometida con los objetivos que me propongo.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <button class="edit-button"><i class="fa-solid fa-plus"></i></button>
-                    <h2 class="mb-5">Experiencia</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <button class="edit-button"><i class="fa-solid fa-trash"></i></button>
-                            <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
-                            <div class="image-experience">
-                                <img src="./assets/img/Empresa.png" alt="">
-                            </div>
-                            <h3 class="mb-0">Desarrollador De Software</h3>
-                            <div class="mb-2">Addepto - Jornada Completa</div>
-                            <div class="subheading mb-3">Junio 2019 - presente - New York, U.S</div>
-                            <ul>
-                                <li class="mb-1">Diseño y desarrollo de aplicaciones web utilizando HTML, CSS, JavaScript y frameworks como React y Angular.</li>
-                                <li class="mb-1">Desarrollo de aplicaciones móviles para Android utilizando Kotlin y Java.</li>
-                                <li class="mb-1">Trabajo en equipo con otros desarrolladores y diseñadores para asegurar la calidad del producto final.</li>
-                                <li class="mb-1">Implementación de soluciones innovadoras y mejoras en procesos de desarrollo.</li>
-                            </ul>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Education-->
-            <section class="resume-section" id="education">
-                <div class="resume-section-content">
-                    <button class="edit-button"><i class="fa-solid fa-plus"></i></button>
-                    <h2 class="mb-5">Educacion</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <div class="image-experience">
-                                <img src="./assets/img/unlp.png" alt="">
-                            </div>
-                            <button class="edit-button"><i class="fa-solid fa-trash"></i></button>
-                            <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
-                            <h3 class="mb-0">Universidad Nacional De La Plata</h3>
-                            <div class="mb-2">Licenciatura en Informática</div>
-                            <div class="subheading mb-3">Agosto 2014 - Mayo 2019</div>
-                            <p></p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
-                <div class="resume-section-content">
-                    <button class="edit-button"><i class="fa-solid fa-plus"></i></button>
-                    <h2 class="mb-5">Hard Skills & Soft Skills</h2>
-                    <div class="button-center">
-                        <button class="edit-button"><i class="fa-solid fa-trash"></i></button>
-                        <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
-                    </div>
-                    <p class="center-text">Backend Developer</p>
-                    <div class="bar-container">
-                        <div class="bar" style="width: 75%;">75%</div>
-                    </div>
-                    <div class="button-center">
-                        <button class="edit-button"><i class="fa-solid fa-trash"></i></button>
-                        <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
-                    </div>
-                    <p class="center-text">Capacidad de análisis y resolución de problemas.</p>
-                    <div class="bar-container">
-                        <div class="bar" style="width: 50%;">50%</div>
-                    </div>
-                </div>
-
-            </section>
-            <hr class="m-0" />
-            <section class="resume-section" id="projects">
-                <div class="resume-section-content">
-                        <button class="edit-button"><i class="fa-solid fa-plus"></i></button>
-                        <h2 class="mb-5">Proyectos</h2>
-                    <div class="separate-container">
-                        <div class="button-center">
-                            <button class="edit-button"><i class="fa-solid fa-trash"></i></button>
-                            <button class="edit-button"><i class="fa-solid fa-pen"></i></button>
-                        </div>
-                        <h3 class="mb-0">Seguimiento De Inventario</h3>
-                        <p class="subheading mb-3">Implementación de un sistema de seguimiento de inventario utilizando Python y una base de datos NoSQL.</p>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-        </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+    <body>
+      <app-root></app-root>
+      <!-- Bootstrap core JS-->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+      <!-- Core theme JS-->
+      <script src="scripts.js"></script>
     </body>
 </html>
